--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ serde_json = "1.0"
 
 [dev-dependencies]
 actix-rt = "2.1.0"
+claim = "0.5.0"
 reqwest = { version = "0.11.1", features = ["rustls-tls-native-roots"]}
 tokio = "1.2.0"
