Adding ssl certificates to github actions: test 1

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -10,6 +10,20 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Create ssl dir
+        run: mkdir ssl
+
+      - name: Generate certificates for next step
+        uses: kofemann/action-create-certificate@v0.0.4
+        with:
+          hostcert: 'ssl/cert.pem'
+          hostkey: 'ssl/key.pem'
+          cachain: 'ssl/ca-chain.pem'
+
+      - name: Use generated certificates
+        run: |
+          openssl x509 -in ssl/cert.pem -noout -text
+
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
